syntax="proto3";

package pb;

option go_package=".;pb";

message Todo {
    string id = 1;
    string title = 2;
    bool completed = 3;
    string description = 4;
}

message EmptyRequest {}
message TodoResponse {
    repeated Todo items = 1;
}
message CreateTodoResponse {
    string message = 1;
}

service TodoService {
    rpc GetTodos(EmptyRequest) returns (TodoResponse);
    rpc CreateTodo(Todo) returns (CreateTodoResponse);
}
